# syntax-highlighter

./: CMakeLists.txt  README.md  c.xml  default.xml  test.txt
lib/: CMakeLists.txt  highlighter.cpp  highlighter.hpp  repository.cpp  repository.hpp  syntax.qrc
lib/data/syntax/: c.xml  cpp.xml
src/: CMakeLists.txt  global.hpp  highlighter.cpp  highlighter.hpp  main.cpp  repository.cpp  repository.hpp  syntax.qrc  toolbar.cpp  toolbar.hpp  window.cpp  window.hpp
src/data/theme/: default.xml
